<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projetandroiderwando.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.projetandroiderwando.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.projetandroiderwando.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/nav_itinerary"
        android:name="com.example.projetandroiderwando.ui.itinerary.ItineraryFragment"
        android:label="@string/menu_itinerary"
        tools:layout="@layout/fragment_itinerary" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.projetandroiderwando.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>